--- a/README.Rmd
+++ b/README.Rmd
@@ -18,38 +18,17 @@ knitr::opts_chunk$set(
 <!-- badges: start -->
 <!-- badges: end -->
 
-The goal of Rcentury is to run CENTURY 4.7 (version Fortran) from within R. That includes preparing files with **.100** extension (which include all soil characteristics) and loading the resulting *.bin file into R as a **data.frame**.
+The goal of Rcentury is to run CENTURY 4.7 (version Fortran) from within R. That includes preparing treatments, schedule, weather and site characteristic files with **.100** extension, and then loading the resulting **bin** file into your R session as a **data.frame**.
 
 ## Installation
 
-You can install the development version of Rcentury from [GitHub](https://github.com/) with:
 
-``` r
-# install.packages("pak")
-pak::pak("emf-creaf/Rcentury")
-```
 
 ## Example
 
-This is a basic example which shows you how to solve a common problem:
+Once installed, you can load it as:
 
 ```{r example}
 library(Rcentury)
 ## basic example code
 ```
-
-What is special about using `README.Rmd` instead of just `README.md`? You can include R chunks like so:
-
-```{r cars}
-summary(cars)
-```
-
-You'll still need to render `README.Rmd` regularly, to keep `README.md` up-to-date. `devtools::build_readme()` is handy for this.
-
-You can also embed plots, for example:
-
-```{r pressure, echo = FALSE}
-plot(pressure)
-```
-
-In that case, don't forget to commit and push the resulting figure files, so they display on GitHub and CRAN.
