--- a/vignettes/Example_uncertainty_sensitivity.Rmd
+++ b/vignettes/Example_uncertainty_sensitivity.Rmd
@@ -14,25 +14,99 @@ knitr::opts_chunk$set(
 )
 ```
 
-```{r setup_Rcentury}
+
+
+## Introduction
+
+We can use the Rcentury package to assess how uncertainties (aka errors) in a model's parameters contribute to the overall uncertainty of its output. In general, for many models it is possible to derive approximate analytical expressions for n-error error propagation by using Taylor expansions, which involves calculating analytical n-order derivatives. However, this approach quickly becomes cumbersome and impractical when the number of parameters grows high and, especially, when the function to evaluate is very complex and non-linear like CENTURY. Therefore, to determine error propagation for the CENTURY model we turn to a much simpler Monte Carlo numerical approach, which consists of feeding the model with input parameters of interests which vary randomly at each model run following a given distribution of known mean and variance.
+
+For the sake of simplicity we will demonstrate how to perform an uncertainty propagation analysis for soil texture (i.e. clay, silt and sand) only, keeping all the other parameters of the model fixed. In this case, at each model run we will draw random proportion values for each of the three parameters, calculate the CENTURY model with those values and then save the output. This will be done many times to derive reliable confidence intervals for the output.
+
+Soil texture is given as a set of 3 proportions which add up to 1 always, and thus we need to specify a random distribution that accounts for that property. Consequently, we turn to Dirichlet distributions, which allow us to model probability distributions of outcomes for categorical events, such that the total probability adds up to one. For details, see Annex below.
+
+<br>
+
+
+## Rcentury simulations
+
+For this example we will use the forest data from CENTURY example files. We will create a temporary directory and move there all necessary files (ASCII data files and executables). The simulation below will be carried out with the so-called $\texttt{duke.100}$ example, though any other site would do.
+
+```{r copy_files}
+# Copy all files to temporary folder.
+from_dir <- system.file("extdata/4.forest",  package = "Rcentury")
+to_dir <- tempdir()
+invisible(file.copy(from_dir, to_dir, overwrite = TRUE, recursive = TRUE))
+path_exe <- system.file("bin/windows",  package = "Rcentury")
+century_exe <- file.path(path_exe, "century_47.exe")
+list100_exe <- file.path(path_exe, "list100_47.exe")
+to_dir <- file.path(to_dir, "4.forest")
+invisible(file.copy(century_exe, to_dir, overwrite = TRUE, recursive = TRUE))
+invisible(file.copy(list100_exe, to_dir, overwrite = TRUE, recursive = TRUE))
+```
+
+<br>
+
+We will also need package $\texttt{extraDistr}$, available from CRAN, which will provide us with a random-number generator for the Dirichlet distribution. We will also load the Rcentury package.
+
+```{r install_distrib}
+# install.packages("extraDistr")
+library(extraDistr)
 library(Rcentury)
 ```
 
+<br>
+
+We intend to model the propagation of uncertainty for, and sensibility to, texture parameters. Those parameters are included in the $\texttt{duke.100}$ site file, which is then read by $\texttt{century_47.exe}$ during execution. Consequently, we use package functions $\texttt{read_site.R}$ and $\texttt{write_site.R}$ to read site data and write it back onto disk at each simulation step.
+
+The output of the CENTURY model may include up to variables, in this example we will focus on total system carbon (variable $totsysc$).
 
 
-### Introduction
+```{r simu}
+# Read site characteristics and extract sand, slit and clay values.
+site <- site2 <- read_site(to_dir, "duke.100")
+x <- site$`site and control`$df
+sand <- x$value[x$field == "SAND"]
+silt <- x$value[x$field == "SILT"]
+clay <- x$value[x$field == "CLAY"]
+alpha <- dirichlet_params(c(sand, silt, clay), c(NA, .01, NA))
 
-We can use the Rcentury package to assess how uncertainties (aka errors) in a model's parameters contribute to the overall uncertainty of its output. Mathematically, it should be possible to derive approximate analytical expressions for n-error error propagation by using Taylor expansions, which involves calculating analytical n-order derivatives. However, this approach quickly becomes cumbersome and impractical when the number of parameters grows high and, especially, when the function to evaluate is very complex and non-linear like CENTURY. Therefore, to determine error propagation for the CENTURY model we turn to a much simpler Monte Carlo numerical approach, which consists of feeding the model with input parameters of interests which vary randomly at each model run following a given distribution of known mean and variance.
+# We need an ASCII text file with a list of variables to extract; in this case, only $totsysc$.
+cat("totsysc", file = file.path(to_dir, "totsysc.txt"))
 
-For the sake of simplicity we will demonstrate how to perform an uncertainty propagation analysis of uncertainty in soil texture (i.e. clay, silt and sand) only, keeping all the other parameters of the model fixed. In this case, at each model run we will draw random proportion values for each of the three parameters, calculate the CENTURY model with those values and then save the output. This will be done many times to derive reliable confidence intervals for the outputs.
+# Finally, the simulations.
+nsimu <- 10
+df <- list()
+for (i in 1:nsimu) {
+  
+  # Random Dirichlet triplet.
+  texture_random <- rdirichlet(1, alpha)
+  
+  # Save <site>.100 file.
+  x <- site2$`site and control`$df
+  x$value[x$field == "SAND"] <- texture_random[1]
+  x$value[x$field == "SILT"] <- texture_random[1]
+  x$value[x$field == "CLAY"] <- texture_random[1]
+  site2$`site and control`$df <- x
+  write_site(site2, to_dir, "duke.100", overwrite = TRUE)
+  
+  df[[i]] <- century_run(to_dir, "duke.sch", "res.bin", "res.lis", "totsysc.txt", verbose = FALSE)
+  invisible(file.remove(file.path(to_dir, c("res.bin", "res.lis"))))
+}
+```
 
+<br>
 
-### How to draw multivariate proportions
+Once we have performed all the simulations, we can proceed to determine how the uncertainty propagates in the model and what is its sensitivity to each of the three soil components. 
 
-Texture is always given as a set of 3 proportions which add up to 1 always, we need to specify a random distribution that accounts for that property. Consequently, we turn to Dirichlet distributions, which 
+### Model uncertainty
 
+```{r extract_uncert}
+x <- sapply(1:nsimu, function(i) df[[i]]$totsysc[100])
+```
 
+<br>
 
+## Annex: How to draw multivariate proportions
 
 The means of the proportions will be fixed in our simulations.
 
@@ -60,54 +134,18 @@ $$Var[x_i] = \frac{\tilde{\alpha_i}\cdot(1-\tilde{\alpha_i})}{\alpha_0-1}$$
 where:
 
 $$\tilde{\alpha_i}=\frac{\alpha_i}{\alpha_0}$$
-We can use those two expressions to calculate the $\alpha_j$ values when we are given four parameters for the $E[x_i]$ or $E[V_i]$. The Rcentury package provides with a function, called $dirichlet\_params.R$, that can calculate the $\alpha_j$ values when all the means $E[x_i]\text{ for all } i \in \{1, \dots, K\}$ and one single variance value $Var[x_j]$ are known.
+We can use those two expressions to calculate the $\alpha_j$ values when we are given four parameters for the $E[x_i]$ or $E[V_i]$. The Rcentury package provides with a function, called $\texttt{dirichlet_params.R}$, that can calculate the $\alpha_j$ values when all the means $E[x_i]\text{ for all } i \in \{1, \dots, K\}$ and one single variance value $Var[x_j]$ are known.
 
-
-The Dirichlet distribution is implemented in package extraDistr, which we can install from CRAN:
-
-```{r install_distrib}
-# install.packages("extraDistr")
-library(extraDistr)
-```
 
 For example, for $K=3$ and $E[x_1]=.35$, $E[x_2]=.12$, $E[x_3]=.53$ and $Var[x_2]=.17$, we can easily generate sequences of Dirichlet-distributed triplets.
 
 ```{r hist_triplets, fig.width = 7}
-alpha <- dirichlet_params(c(.35, .12, .53), c(NA, .042, NA))
-x <- rdirichlet(10000, alpha)
+alpha <- dirichlet_params(c(.28, .60, .12), c(NA, .01, NA))
+x <- rdirichlet(100000, alpha)
 par(mfrow = c(1, 3))
-hist(x[, 1], xlab = "", main = "First component")
-hist(x[, 2], xlab = "", main = "Second component")
-hist(x[, 3], xlab = "", main = "Third component")
+hist(x[, 1], xlab = "", main = "Sand", breaks = seq(0, 1, length = 50))
+hist(x[, 2], xlab = "", main = "Silt", breaks = seq(0, 1, length = 50))
+hist(x[, 3], xlab = "", main = "Clay", breaks = seq(0, 1, length = 50))
 par(mfrow = c(1,1))
 ```
 
-
-### Rcentury simulations
-
-
-
-```{r copy_files}
-from_dir <- system.file("extdata/4.forest",  package = "Rcentury")
-to_dir <- tempdir()
-dir.create(to_dir)
-invisible(file.copy(from_dir, to_dir, overwrite = TRUE, recursive = TRUE))
-path_exe <- system.file("bin/windows",  package = "Rcentury")
-century_exe <- file.path(path_exe, "century_47.exe")
-list100_exe <- file.path(path_exe, "list100_47.exe")
-to_dir <- file.path(to_dir, "4.forest")
-invisible(file.copy(century_exe, to_dir, overwrite = TRUE, recursive = TRUE))
-invisible(file.copy(list100_exe, to_dir, overwrite = TRUE, recursive = TRUE))
-```
-
-
-
-```{r simu}
-#
-
-nsimu <- 10
-for (i in 1:nsimu) {
-  df <- century_run(to_dir, "duke.sch", "res.bin", "res.lis", "outvars.txt", verbose = FALSE)
-  invisible(file.remove(file.path(to_dir, c("res.bin", "res.lis"))))
-}
-```
