--- a/README.Rmd
+++ b/README.Rmd
@@ -20,54 +20,55 @@ knitr::opts_chunk$set(
 
 ## Introduction
 
-The CENTURY soil model is a bio-chemistry ecosystem model that simulates the long-term dynamics of carbon, nitrogen, phosphorus, and sulfur in various terrestrial ecosystems. It can be used to predict how climate and land management practices impact and change soil health and carbon sequestration. The model works by splitting soil organic matter into three different carbon pools based on their decomposition rates. The rates are influenced differently by soil temperature, moisture, texture, and cultivation practices.
+The CENTURY soil model is a bio-chemistry ecosystem model that simulates the long-term dynamics of Carbon, Nitrogen, Phosphorus, and Sulfur in various terrestrial ecosystems. It can be used to predict how climate and land management practices impact and change soil health and carbon sequestration. The model works by splitting soil organic matter into three different carbon pools based on their decomposition rates. The rates are influenced differently by soil temperature, moisture, texture, and cultivation practices.
 
 The CENTURY soil model is available for download at https://www.soilcarbonsolutionscenter.com/people in its Fortran 4.7 version. It can be used as a stand-alone software to be run on a Windows command-prompt console. To be able to execute the CENTURY software a series of ASCII files must also be prepared in advance, which will then be read when CENTURY is run. Those files include:
 
 1. A set of up to 11 option files with extension '.100', containing a large set of parameters. The name of these files is fixed.
 2. Single site file, also with extension '.100', containing site-specific parameters. The name of this file can be chosen at will.
-3. Weather file, with extension '.wth', that includes monthly data for precipitation, minimum and maximum temperature for the site.
+3. Weather file, with extension '.wth', that includes monthly data for precipitation and minimum and maximum temperature for the site.
 4. Schedule file, with extension '.sch', which details the timing and sequence of all events in the simulation.
 
-All these files must exist in the same folder.
+All these ASCII files, together with the executable '.exe' programs, must exist in the same folder.
 
-Editing each of these input files individually is an extremely tedious and challenging task, particularly when our goal is to apply the CENTURY model to a large number of different sites, and/or under a variety of different climatic and land management scenarios. This manual process is also highly susceptible to errors, given the vast number of parameters that must be carefully adjusted.
+Editing each of these input files individually is an extremely tedious and challenging task, particularly when our goal is to apply the CENTURY model to a large number of different sites, and/or under a variety of different climatic and land management scenarios. This manual process is also highly susceptible to errors, given the vast number of parameters that must be carefully tuned-up and adjusted.
 
 Therefore, it is a significant improvement in workflow to be able to perform all these file operations from within a comprehensive software environment like R. The goal of package Rcentury is thus to run CENTURY 4.7 (version Fortran) from R on a command window. That includes preparing all files (treatments, schedule, weather and site characteristic), and then read and load the result files into your R session as a **data.frame**. Notice that Rcentury is NOT an implementation of the CENTURY equations in R code. Rather, it is an interface between the original CENTURY Fortran code and R, which guarantees that calculations are done via the actual CENTURY code.
 
 
-## How to download and use CENTURY 4.7 as stand-alone software
+## How to download CENTURY 4.7
 
-The Fortran version of the CENTURY 4.7 software can be downloaded directly from the web site https://www.soilcarbonsolutionscenter.com, after filling out a form. Two zip-files are automatically downloaded, which must then be unzipped in the folder of our choice. The uncompressed folders contain all the necessary files, plus several user manuals and examples.
+The Fortran version of the CENTURY 4.7 software can be downloaded directly from the web site https://www.soilcarbonsolutionscenter.com, after filling out a form. Two zip-files are automatically downloaded, which must then be unzipped into a local folder of our choice. The uncompressed folders contain all the necessary files, plus several user manuals and examples.
 
-All required files must be kept in the same folder for CENTURY to run. That includes schedule, weather, site and soil characteristic files (see numbered list above), as well as two compiled '.exe' programs ('century_47.exe' and 'list100_47.exe'). To run the CENTURY model you must follow the examples and the enclosed documentation.
+All required files must be kept in the same folder for CENTURY to run. That includes schedule, weather, site and soil characteristic files (see numbered list above), as well as two compiled '.exe' programs ('century_47.exe' and 'list100_47.exe'). To run the CENTURY model on a command window (not covered here) without the use of this package it is recommended that you follow the examples and the enclosed documentation.
 
 
-### How to use Rcentury
+## How to use Rcentury
 
-If you decide to run CENTURY from a R session, you may proceed as follows. First, package Rcentury must be install and loaded into your R session. The package is publicly available at github and can be easily fetched:
+### Where are all those files?
+
+To run CENTURY from a R session with the Rcentury package we may proceed as follows. First, package Rcentury must be install on our local computer. The package is publicly available at github and can be easily fetched:
 
 ```{r install}
 devtools::install_github("https://github.com/emf-creaf/Rcentury.git")
 ```
 
-Then, we load it as is usual in R:
+Then, we load it into our R session:
 
 ```{r load}
 library(Rcentury)
-## basic example code
 ```
 
 This ensures that all package functions are available at the R session.
 
-Rcentury comes packed with the original CENTURY 4.7 example files, which can be used to prepare your own parameter files. Those files are located in three sub-folders:
+Rcentury comes packed with the original CENTURY 4.7 example files, which can be used as starting templates to prepare our own parameter files. Those files are located in three sub-folders that are created when unzipping the CENTURY downloaded files:
 
 1. Grassland with grazing simulation ran for a site in Xilingol,
-Mongolia (sub-folder "1.soil_texture_ppt").
-2. Plant production for different grass types with different relative temperature growth curves (sub-folder "3.plant_production").
-3. DUke and Harvard forests (sub-folder "4.forest").
+Mongolia (sub-folder "/Century+Examples/Century Examples/1.soil_texture_ppt").
+2. Plant production for different grass types with different relative temperature growth curves (sub-folder "/Century+Examples/Century Examples/3.plant_production").
+3. DUke and Harvard forests (sub-folder "/Century+Examples/Century Examples/4.forest").
 
-We can access those folders by using the R function "system.file":
+Access to those folders is granted by using the R function "system.file":
 
 
 ```{r subfolders}
@@ -80,16 +81,24 @@ path_in <- c(system.file("extdata/1.soil_texture_ppt",  package = "Rcentury"),
 ```
 
 
-
-
-
-
 ### Example files
 
-There are two main ways to prepare the ASCII files that are required to run a simulation successfully, namely from scratch and using the example files available with the compressed '.zip'. Hereby we will be concerned with the latter case.
+There are two main ways to prepare the ASCII files that are required to run a simulation successfully, namely doing it from scratch or using the example files available with the compressed '.zip'. Hereby we will be concerned with the latter case.
+
+As mentioned above, the Rcentury package includes the example files that accompany the '.zip' file that we may download from the 
 
 
-### How to prepare a CENTURY simulation with the Rcentury package
+### Prepare a CENTURY simulation
+
+The steps to follow to prepare a CENTURY simulation with the Rcentury package are as follows:
+
+1. Download the CENTURY 4.7 files as two compressed zip files (as of October 2025) from the web site.
+2. Unfold the zip files into a local folder. You will end up with a series of subfolders which enclose manuals and example files.
+
+
+3. Next, create a directory where you will hold all required CENTURY files and the results of your own simulations. Those files include the 4 types of files described above.
+
+4. Open RStudio
 
 There are three example simulations that accompany the CENTURY '.zip' files. 
 
